--- a/PharmaQueue/Views/Prescriptions/Create.cshtml
+++ b/PharmaQueue/Views/Prescriptions/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model PharmaQueue.Models.Prescription
+﻿@model PharmaQueue.Models.PrescriptionViewModels.PrescriptionCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -13,45 +13,29 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="@Model.Prescription.Name" class="control-label"></label>
+                <input asp-for="@Model.Prescription.Name" class="form-control" />
+                <span asp-validation-for="@Model.Prescription.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Strength" class="control-label"></label>
-                <input asp-for="Strength" class="form-control" />
-                <span asp-validation-for="Strength" class="text-danger"></span>
+                <label asp-for="@Model.Prescription.Strength" class="control-label"></label>
+                <input asp-for="@Model.Prescription.Strength" class="form-control" />
+                <span asp-validation-for="@Model.Prescription.Strength" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Quantity" class="control-label"></label>
-                <input asp-for="Quantity" class="form-control" />
-                <span asp-validation-for="Quantity" class="text-danger"></span>
+                <label asp-for="@Model.Prescription.Quantity" class="control-label"></label>
+                <input asp-for="@Model.Prescription.Quantity" class="form-control" />
+                <span asp-validation-for="@Model.Prescription.Quantity" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Refills" class="control-label"></label>
-                <input asp-for="Refills" class="form-control" />
-                <span asp-validation-for="Refills" class="text-danger"></span>
+                <label asp-for="@Model.Prescription.Refills" class="control-label"></label>
+                <input asp-for="@Model.Prescription.Refills" class="form-control" />
+                <span asp-validation-for="@Model.Prescription.Refills" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <div class="checkbox">
-                    <label>
-                        <input asp-for="IsSold" /> @Html.DisplayNameFor(model => model.IsSold)
-                    </label>
-                </div>
-            </div>
-            <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="PrescriptionStatusId" class="control-label"></label>
-                <input asp-for="PrescriptionStatusId" class="form-control" />
-                <span asp-validation-for="PrescriptionStatusId" class="text-danger"></span>
+                <label asp-for="@Model.Prescription.Price" class="control-label"></label>
+                <input asp-for="@Model.Prescription.Price" class="form-control" />
+                <span asp-validation-for="@Model.Prescription.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
