updated migrations to fix issue with database

--- a/PharmaQueue/Views/Prescriptions/Delete.cshtml
+++ b/PharmaQueue/Views/Prescriptions/Delete.cshtml
@@ -48,10 +48,10 @@
             @Html.DisplayFor(model => model.IsSold)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.PrescriptionStatusId)
+            @Html.DisplayNameFor(model => model.StatusId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.PrescriptionStatusId)
+            @Html.DisplayFor(model => model.StatusId)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.DateCreated)
