--- a/PharmaQueue/Views/Prescriptions/Index.cshtml
+++ b/PharmaQueue/Views/Prescriptions/Index.cshtml
@@ -31,7 +31,7 @@
                 @Html.DisplayNameFor(model => model.IsSold)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PrescriptionStatusId)
+                @Html.DisplayNameFor(model => model.StatusId)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.DateCreated)
@@ -64,7 +64,7 @@
                 @Html.DisplayFor(modelItem => item.IsSold)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PrescriptionStatusId)
+                @Html.DisplayFor(modelItem => item.StatusId)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DateCreated)
