--- a/PharmaQueue/Views/Prescriptions/Edit.cshtml
+++ b/PharmaQueue/Views/Prescriptions/Edit.cshtml
@@ -51,9 +51,9 @@
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PrescriptionStatusId" class="control-label"></label>
-                <input asp-for="PrescriptionStatusId" class="form-control" />
-                <span asp-validation-for="PrescriptionStatusId" class="text-danger"></span>
+                <label asp-for="StatusId" class="control-label"></label>
+                <input asp-for="StatusId" class="form-control" />
+                <span asp-validation-for="StatusId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
