--- a/PharmaQueue/Views/Customers/Details.cshtml
+++ b/PharmaQueue/Views/Customers/Details.cshtml
@@ -23,9 +23,11 @@
         @foreach (var item in Model.Prescriptions)
 
         {
-            <dd>@Html.DisplayFor(modelItem => item.Name)</dd>
-            <dd>@Html.DisplayFor(modelItem => item.Strength)</dd>
-            <dd>@Html.DisplayFor(modelItem => item.Quantity)</dd>
+            <dd>
+                Medication: @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.Strength)   
+                #@Html.DisplayFor(modelItem => item.Quantity)
+            </dd>
         }
     </dl>
 </div>
