--- a/PharmaQueue/Views/Shared/_Layout.cshtml
+++ b/PharmaQueue/Views/Shared/_Layout.cshtml
@@ -31,6 +31,11 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Prescriptions" asp-action="Index">Prescriptions</a></li>
+                    <li>
+                        <form asp-controller="Customers" asp-action="Search" method="get" class="nav-search">
+                            <input type="text" name="search" class="input-sm" placeholder="Search By Last Name" />
+                        </form>
+                    </li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
