--- a/PharmaQueue/Views/Customers/Details.cshtml
+++ b/PharmaQueue/Views/Customers/Details.cshtml
@@ -29,14 +29,12 @@
             #@Html.DisplayFor(modelItem => item.Quantity)
             @if (item.StatusId == 1)
             {
-                <a asp-controller="Prescriptions" asp-action="Delete" asp-route-id="@item.PrescriptionId">| Delete</a>
+            <form asp-controller="Prescriptions" asp-action="Delete" asp-route-id="@item.PrescriptionId">
+                <input type="submit" class="btn btn-danger btn-sm" value="Delete" />
+            </form>
             }
         </dd>
         }
     </dl>
     <a asp-controller="Prescriptions" asp-action="Create" asp-route-id="@Model.UserId">Add a Prescription</a>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.UserId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
 </div>
