--- a/PharmaQueue/Views/Customers/Details.cshtml
+++ b/PharmaQueue/Views/Customers/Details.cshtml
@@ -27,11 +27,15 @@
             Medication: @Html.DisplayFor(modelItem => item.Name)
             @Html.DisplayFor(modelItem => item.Strength)
             #@Html.DisplayFor(modelItem => item.Quantity)
+            @if (item.StatusId != 4)
+            {
+                <a asp-controller="Prescriptions" asp-action="Edit" asp-route-id="@item.PrescriptionId">Edit</a>
+            }
             @if (item.StatusId == 1)
             {
-            <form asp-controller="Prescriptions" asp-action="Delete" asp-route-id="@item.PrescriptionId">
-                <input type="submit" class="btn btn-danger btn-sm" value="Delete" />
-            </form>
+                <form asp-controller="Prescriptions" asp-action="Delete" asp-route-id="@item.PrescriptionId">
+                    <input type="submit" class="btn btn-danger btn-sm" value="Delete" />
+                </form>
             }
         </dd>
         }
