--- a/PharmaQueue/Views/Prescriptions/Index.cshtml
+++ b/PharmaQueue/Views/Prescriptions/Index.cshtml
@@ -63,7 +63,10 @@
                 @Html.DisplayFor(modelItem => item.User.LastName)
             </td>
             <td>
+                @if (item.StatusId != 4)
+                {
                 <a asp-action="Edit" asp-route-id="@item.PrescriptionId">Edit</a>
+                }
                 @if (item.StatusId==1) {
                 <form asp-controller="Prescriptions" asp-action="Delete" asp-route-id="@item.PrescriptionId">
                     <input type="submit" class="btn btn-danger btn-sm" value="Delete" />
