employees can successfully update the status of a prescription. Upon updating the prescription to the Ready status, the employee can no longer update the prescription because the button is now hidden. If a customer attempts to access this method or if no id is passed in, then they are redirected back to the index page

--- a/PharmaQueue/Views/Prescriptions/Index.cshtml
+++ b/PharmaQueue/Views/Prescriptions/Index.cshtml
@@ -63,14 +63,16 @@
                 @Html.DisplayFor(modelItem => item.User.LastName)
             </td>
             <td>
+                <a class="btn btn-sm btn-danger" asp-action="Details" asp-route-id="@item.PrescriptionId">Detials</a>
                 @if (item.StatusId != 4)
                 {
-                <a asp-action="Edit" asp-route-id="@item.PrescriptionId">Edit</a>
+                    <a class="btn btn-sm btn-danger" asp-action="Edit" asp-route-id="@item.PrescriptionId">Edit</a>
                 }
-                @if (item.StatusId==1) {
-                <form asp-controller="Prescriptions" asp-action="Delete" asp-route-id="@item.PrescriptionId">
-                    <input type="submit" class="btn btn-danger btn-sm" value="Delete" />
-                </form>
+                @if (item.StatusId == 1)
+                {
+                    <form asp-controller="Prescriptions" asp-action="Delete" asp-route-id="@item.PrescriptionId">
+                        <input type="submit" class="btn btn-danger btn-sm" value="Delete" />
+                    </form>
                 }
             </td>
         </tr>
