Employees can now successfully sell a prescription when the Status is Ready and IsSold is false. When both are true, then the Sell button is no longer in the prescription details page

--- a/PharmaQueue/Views/Prescriptions/Index.cshtml
+++ b/PharmaQueue/Views/Prescriptions/Index.cshtml
@@ -27,7 +27,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.Status)
             </th>
-            
             <th>
                 @Html.DisplayNameFor(model => model.DateCreated)
             </th>
@@ -52,9 +51,18 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
+            @if (item.StatusId <= 4 && item.IsSold == false)
+            {
             <td>
                 @Html.DisplayFor(modelItem => item.Status.QueueStatus)
             </td>
+            }
+            @if (item.StatusId == 4 && item.IsSold == true)
+            {
+            <td>
+                Sold
+            </td>
+            }
             <td>
                 @Html.DisplayFor(modelItem => item.DateCreated)
             </td>
