--- a/PharmaQueue/Views/Prescriptions/Details.cshtml
+++ b/PharmaQueue/Views/Prescriptions/Details.cshtml
@@ -26,8 +26,18 @@
         <dt>
             @Html.DisplayNameFor(model => model.Status)
         </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Status.QueueStatus)
+        @if (Model.StatusId <= 4 && Model.IsSold == false)
+        {
+            <dd>
+                @Html.DisplayFor(model => model.Status.QueueStatus)
+            </dd>
+        }
+        @if (Model.StatusId == 4 && Model.IsSold == true)
+        {
+            <dd>
+                Sold
+            </dd>
+        }
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
@@ -58,16 +68,22 @@
         <dd>
             @Html.DisplayFor(model => model.Price)
         </dd>
-        
+
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.PrescriptionId">Edit</a> |
+    <a class="btn btn-danger btn-xs" asp-action="Edit" asp-route-id="@Model.PrescriptionId">Edit</a> |
     @if (Model.StatusId < 4)
     {
-    <form asp-controller="Prescriptions" asp-action="Update" asp-route-id="@Model.PrescriptionId">
-        <input type="submit" class="btn btn-danger btn-xs" value="Update" /> |
-    </form>
+        <form asp-controller="Prescriptions" asp-action="Update" asp-route-id="@Model.PrescriptionId">
+            <input type="submit" class="btn btn-danger btn-xs" value="Update" /> |
+        </form>
     }
-    <a asp-action="Index">Back to List</a>
+    @if (Model.StatusId == 4 && Model.IsSold == false)
+    {
+        <form asp-controller="Prescriptions" asp-action="Sell" asp-route-id="@Model.PrescriptionId">
+            <input type="submit" class="btn btn-danger btn-xs" value="Sell" /> |
+        </form>
+    }
+    <a class="btn btn-danger btn-xs" asp-action="Index">Back to List</a>
 </div>
