--- a/PharmaQueue/Views/Prescriptions/Index.cshtml
+++ b/PharmaQueue/Views/Prescriptions/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PharmaQueue.Models.Prescription>
+﻿@model PharmaQueue.Models.PrescriptionViewModels.PrescriptionIndexViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -10,31 +10,31 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Strength)
+                Strength
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Quantity)
+                Quantity
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Refills)
+                Refills
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price)
+                Price
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Status)
+                Status
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DateCreated)
+                DateCreated
             </th>
             <th>Name</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model.Prescriptions) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
@@ -72,11 +72,11 @@
             </td>
             <td>
                 <a class="btn btn-xs btn-danger" asp-action="Details" asp-route-id="@item.PrescriptionId">Detials</a>
-                @if (item.StatusId != 4)
+                @if (item.StatusId != 4 && Model.CurrentUserTypeId == 1)
                 {
                     <a class="btn btn-xs btn-danger" asp-action="Edit" asp-route-id="@item.PrescriptionId">Edit</a>
                 }
-                @if (item.StatusId == 1)
+                @if (item.StatusId == 1 && Model.CurrentUserTypeId == 1)
                 {
                     <form asp-controller="Prescriptions" asp-action="Delete" asp-route-id="@item.PrescriptionId">
                         <input type="submit" class="btn btn-danger btn-xs" value="Delete" />
