--- a/PharmaQueue/Views/Home/Index.cshtml
+++ b/PharmaQueue/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PharmaQueue.Models.ApplicationUser>
+﻿@model PharmaQueue.Models.HomeViewModel.HomeIndexViewModel
 
 @{
     ViewData["Title"] = "Home Page";
@@ -6,24 +6,92 @@
 
 <div class="container-fluid">
     <h2>Welcome to PharmaQueue!</h2>
-    @if (Model != null)
-    {
-    <div class="row" style="overflow: hidden">
-        @foreach (var item in Model)
-        {
-            <div class="col-md-3" style="border: 4px white solid; background: white; color: #000000; word-wrap: break-word; text-align: center; margin-bottom: -99999px; padding-bottom: 99999px;">
-                <div style="font-size:20px; font-style: italic; height: 62px; overflow: hidden;">
-                    @Html.DisplayFor(modelItem => item.FirstName)
-                    @Html.DisplayFor(modelItem => item.LastName)
-                </div>
-            </div>
-        }
-    </div>
-    }
-    @if (Model == null)
-    {
-        <div>
-            <h3>You are not authorized to view this page</h3>
-        </div>
-    }
+        <table style="width:25%; float:left">
+            <tr>
+                <th>Entered</th>
+            </tr>
+            @if (Model.EnteredPrescriptions.Count() > 0)
+            {
+                @foreach (var item in Model.EnteredPrescriptions)
+                {
+                    <tr>
+                        <td>
+                            @item.Name @item.Strength #@item.Quantity $@item.Price
+                        </td>
+                    </tr>
+                }
+            }
+            @if (Model.EnteredPrescriptions.Count() == 0)
+            {
+                <tr>
+                    <td></td>
+                </tr>
+            }
+        </table>
+        <table style="width:25%; float:left">
+            <tr>
+                <th>Reviewed</th>
+            </tr>
+                @if (Model.ReviewedPrescriptions.Count() > 0)
+                {
+                    @foreach (var item in Model.ReviewedPrescriptions)
+                    {
+                    <tr>
+                        <td>
+                            @item.Name @item.Strength #@item.Quantity $@item.Price
+                        </td>
+                    </tr>
+                }
+                }
+                @if (Model.ReviewedPrescriptions.Count() == 0)
+                {
+                    <tr>
+                        <td></td>
+                    </tr>
+                }
+            </table>
+            <table style="width:25%; float:left">
+                <tr>
+                    <th>Filled</th>
+                </tr>
+                    @if (Model.FilledPrescriptions.Count() > 0)
+                    {
+                        @foreach (var item in Model.FilledPrescriptions)
+                        {
+                        <tr>
+                            <td>
+                                @item.Name @item.Strength #@item.Quantity $@item.Price
+                            </td>
+                        </tr>
+                    }
+                    }
+                    @if (Model.FilledPrescriptions.Count() == 0)
+                    {
+                        <tr>
+                            <td></td>
+                        </tr>
+                    }
+                </table>
+                <table style="width:25%; float:left">
+                    <tr>
+                        <th>Ready</th>
+                    </tr>
+                    @if (Model.ReadyPrescriptions.Count() > 0)
+                    {
+                        @foreach (var item in Model.ReadyPrescriptions)
+                        {
+                            <tr>
+                                <td>
+                                    @item.Name @item.Strength #@item.Quantity $@item.Price
+                                </td>
+                            </tr>
+                        }
+                    }
+                    @if (Model.ReadyPrescriptions.Count() == 0)
+                    {
+                        <tr>
+                            <td></td>
+                        </tr>
+                    }
+                </table>
 </div>
