--- a/PharmaQueue/Views/Customers/Search.cshtml
+++ b/PharmaQueue/Views/Customers/Search.cshtml
@@ -18,10 +18,7 @@ else
         <thead>
             <tr>
                 <th class="col-md-2">
-                    First Name
-                </th>
-                <th class="col-md-4">
-                    Last Name
+                    Customer Name
                 </th>
             </tr>
         </thead>
@@ -30,13 +27,10 @@ else
             {
                 <tr>
                     <td class="col-md-2">
-                        <a asp-controller="Customers" asp-action="Details" asp-route-id="@item.UserId">Details</a>
-                    </td>
-                    <td class="col-md-4">
-                        @Html.DisplayFor(modelItem => item.FirstName)
-                    </td>
-                    <td class="col-md-2">
-                        @item.LastName
+                        <a asp-controller="Customers" asp-action="Details" asp-route-id="@item.UserId" class="category-title">
+                            @Html.DisplayFor(modelItem => item.FirstName)
+                            @item.LastName
+                        </a>
                     </td>
                 </tr>
             }
