--- a/PharmaQueue/Views/Home/Index.cshtml
+++ b/PharmaQueue/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model PharmaQueue.Models.HomeViewModel.HomeIndexViewModel
 
+
 @{
     ViewData["Title"] = "Home Page";
 }
@@ -120,4 +121,29 @@
             </tr>
         }
     </table>
+    <div class="container">
+        <div class="row">&nbsp;</div>
+        <div class="row">
+            <div class="col-6">&nbsp;</div>
+            <div class="col-6">
+                User..........<input type="text" id="userInput" />
+                <br />
+                Message...<input type="text" id="messageInput" />
+                <input type="button" id="sendButton" value="Send Message" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <hr />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">&nbsp;</div>
+            <div class="col-6">
+                <ul id="messagesList"></ul>
+            </div>
+        </div>
+    </div>
+    <script src="~/lib/signalr/dist/browser/signalr.js"></script>
+    <script src="~/js/status.js"></script>
 </div>
