--- a/PharmaQueue/Views/Home/Index.cshtml
+++ b/PharmaQueue/Views/Home/Index.cshtml
@@ -144,6 +144,9 @@
             </div>
         </div>
     </div>
+    <div>
+        <input type="button" id="PrescriptionUpdateButton" value="Update Prescription"/>
+    </div>
     <script src="~/lib/signalr/dist/browser/signalr.js"></script>
     <script src="~/js/status.js"></script>
 </div>
