can now refresh automatically when employee updates prescriptions

--- a/PharmaQueue/Views/Prescriptions/Details.cshtml
+++ b/PharmaQueue/Views/Prescriptions/Details.cshtml
@@ -15,8 +15,8 @@
         </dt>
         <dd>
             <a asp-controller="Customers" asp-action="Details" asp-route-id="@Model.Prescription.UserId">
-            @Html.DisplayFor(model => model.Prescription.User.FirstName)
-            @Html.DisplayFor(model => model.Prescription.User.LastName)
+                @Html.DisplayFor(model => model.Prescription.User.FirstName)
+                @Html.DisplayFor(model => model.Prescription.User.LastName)
             </a>
         </dd>
         <dt>
@@ -74,7 +74,7 @@
     </dl>
 </div>
 <div>
-    @if (Model.CurrentUserTypeId == 1 && Model.Prescription.StatusId < 4 && Model.Prescription.IsSold==false)
+    @if (Model.CurrentUserTypeId == 1 && Model.Prescription.StatusId < 4 && Model.Prescription.IsSold == false)
     {
         <a class="btn btn-danger btn-xs" asp-action="Edit" asp-route-id="@Model.Prescription.PrescriptionId">Edit </a>
     }
@@ -92,3 +92,4 @@
     }
     <a class="btn btn-danger btn-xs" asp-controller="Home" asp-action="Index">Back to List</a>
 </div>
+<script src="~/lib/signalr/dist/browser/signalr.js"></script>
