--- a/PharmaQueue/Views/Prescriptions/Create.cshtml
+++ b/PharmaQueue/Views/Prescriptions/Create.cshtml
@@ -51,3 +51,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+<script src="~/lib/signalr/dist/browser/signalr.js"></script>
