--- a/PharmaQueue/Views/Prescriptions/Details.cshtml
+++ b/PharmaQueue/Views/Prescriptions/Details.cshtml
@@ -77,9 +77,7 @@
     @if (Model.CurrentUserTypeId == 1 && Model.Prescription.StatusId < 4 && Model.Prescription.IsSold == false)
     {
         <a class="btn btn-danger btn-xs" asp-action="Edit" asp-route-id="@Model.Prescription.PrescriptionId">Edit </a>
-    }
-    @if (Model.Prescription.StatusId < 4 && Model.CurrentUserTypeId == 1)
-    {
+
         <form asp-controller="Prescriptions" asp-action="Update" asp-route-id="@Model.Prescription.PrescriptionId">
             <input type="submit" class="btn btn-danger btn-xs" value="Update" /> |
         </form>
@@ -88,6 +86,12 @@
     {
         <form asp-controller="Prescriptions" asp-action="Sell" asp-route-id="@Model.Prescription.PrescriptionId">
             <input type="submit" class="btn btn-danger btn-xs" value="Sell" /> |
+        </form>
+    }
+    @if (Model.Prescription.StatusId ==1 && Model.CurrentUserTypeId == 1 && Model.Prescription.IsSold == false)
+    {
+        <form asp-controller="Prescriptions" asp-action="Delete" asp-route-id="@Model.Prescription.PrescriptionId">
+            <input type="submit" class="btn btn-danger btn-xs" value="Delete" /> |
         </form>
     }
     <a class="btn btn-danger btn-xs" asp-controller="Home" asp-action="Index">Back to List</a>
