page no longer has to reload in order for the new information to show up. now it sends an xml request that replaces the innerHTML of the body div

--- a/PharmaQueue/Views/Shared/_Layout.cshtml
+++ b/PharmaQueue/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
 
     <partial name="_CookieConsentPartial" />
 
-    <div class="container body-content">
+    <div id="bodyForStuff" class="container body-content">
         @RenderBody()
         <hr />
         <footer>
