added borders to the cells in the table

--- a/PharmaQueue/Views/Home/Index.cshtml
+++ b/PharmaQueue/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
         <br>
         <br>
     }
-    <table style="width:25%; float:left">
+    <table class="table-bordered" style="width:25%; float:left">
         <tr>
             <th>Entered</th>
         </tr>
@@ -45,7 +45,7 @@
             </tr>
         }
     </table>
-    <table style="width:25%; float:left">
+    <table class="table-bordered" style="width:25%; float:left">
         <tr>
             <th>Reviewed</th>
         </tr>
@@ -71,7 +71,7 @@
             </tr>
         }
     </table>
-    <table style="width:25%; float:left">
+    <table class="table-bordered" style="width:25%; float:left">
         <tr>
             <th>Filled</th>
         </tr>
@@ -96,7 +96,7 @@
             </tr>
         }
     </table>
-    <table style="width:25%; float:left">
+    <table class="table-bordered" style="width:25%; float:left">
         <tr>
             <th>Ready</th>
         </tr>
