--- a/PharmaQueue/Views/Home/Index.cshtml
+++ b/PharmaQueue/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
     }
     @if (Model.SoldPrescriptions.Count > 0)
     {
-        <a class="btn btn-xs btn-danger" asp-controller="Prescriptions" asp-action="Sold" style="float:left">Sold</a>
+        <a class="btn btn-xs btn-info" asp-controller="Prescriptions" asp-action="Sold" style="float:left">Sold</a>
         <br>
         <br>
     }
@@ -32,7 +32,7 @@
                     <td>
                         <a asp-controller="Prescriptions" asp-action="Details" asp-route-id="@item.PrescriptionId" class="category-title">
                             @item.Name
-                            @item.Strength #@item.Quantity $@item.Price
+                            @item.Strength
                         </a>
                     </td>
                 </tr>
@@ -57,7 +57,7 @@
                     <td>
                         <a asp-controller="Prescriptions" asp-action="Details" asp-route-id="@item.PrescriptionId" class="category-title">
                             @item.Name
-                            @item.Strength #@item.Quantity $@item.Price
+                            @item.Strength
                         </a>
                     </td>
                 </tr>
@@ -83,7 +83,7 @@
                     <td>
                         <a asp-controller="Prescriptions" asp-action="Details" asp-route-id="@item.PrescriptionId" class="category-title">
                             @item.Name
-                            @item.Strength #@item.Quantity $@item.Price
+                            @item.Strength
                         </a>
                     </td>
                 </tr>
@@ -108,7 +108,7 @@
                     <td>
                         <a asp-controller="Prescriptions" asp-action="Details" asp-route-id="@item.PrescriptionId" class="category-title">
                             @item.Name
-                            @item.Strength #@item.Quantity $@item.Price
+                            @item.Strength
                         </a>
                     </td>
                 </tr>
