--- a/PharmaQueue/wwwroot/css/site.css
+++ b/PharmaQueue/wwwroot/css/site.css
@@ -3,6 +3,9 @@ for details on configuring this project to bundle and minify static web assets. 
 body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-image: url('../images/capsules-close-up-drugs-161688.jpg');
+    margin: 0;
+    background-size: cover;
 }
 
 /* Wrapping element */
@@ -34,4 +37,37 @@ body {
     .carousel-caption {
         display: none;
     }
+}
+
+.table-bordered > thead > tr > th, .table-bordered > tbody > tr > th, .table-bordered > tfoot > tr > th, .table-bordered > thead > tr > td, .table-bordered > tbody > tr > td, .table-bordered > tfoot > tr > td {
+    border-color: black;
+}
+
+.input-sm {
+    border-color: black;
+    border-radius: 3px;
+    border-width: thin;
+    background-color: transparent;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+}
+
+.navbar-inverse {
+    background-color: transparent;
+    border-color: transparent;
+}
+
+.navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand{
+    color: black;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color:black;
+}
+
+.navbar-inverse .btn-link {
+    color: black;
 }
